--- a/FinalProject.Rmd
+++ b/FinalProject.Rmd
@@ -437,8 +437,6 @@ In this section I ran the kNN algorithm 100 times to uncover the model with the
 highest accuracy, AUC and Cohen's kappa statistic.
 
 
-
-
 ## SVM
 
 I decided to use a Support Vector Machine supervised learning algorithm for
@@ -499,6 +497,9 @@ svm.cross.r <- CrossTable(x = bc_test$cancer_type, y = bc_svm.pred.r,
 accuracy.svm <- findAccuracy(svm.cross.r$t)
 paste('The accuracy of the model is:', round(accuracy.svm, 4))
 
+# Find the AUC
+auc.svm <- auc()
+
 # Find kappa
 kappa.svm <- Kappa(svm.cross.r$t)
 paste('The Kappa Statistic is:', round(kappa.svm$Unweighted[[1]], 4))
@@ -519,9 +520,8 @@ predicting cancer type from gene expression data.
 # Set seed and random number generator
 RNGversion('3.5.2'); set.seed(123)
 
-# Train the model
-# Find the best neural net model
-max_its <- 4
+# Find the best number of nodes
+max_its <- 10
 ann.acc <- rep(0, max_its)
 ann.auc <- rep(0, max_its)
 ann.k <- rep(0, max_its)
@@ -578,7 +578,7 @@ Based on these results, my best neural network model contains two layers with
 statistic of 0.26.
 
 ```{r evaluate-nn}
-grid <- expand.grid(size = c(1, 2), decay = 0)
+grid <- expand.grid(size = 1, decay = 0)
 bc_ann <- train(cancer_type ~ ., data = bc_train.oversampled, 
                 method = 'nnet', tuneGrid = grid)
 
@@ -602,146 +602,149 @@ Neural network has an accuracy of 87.5% and a kappa statistic of 0.281.
 
 ## Ensemble
 
-```{r}
-# # Create a basic ensemble method
-# runEnsemble <- function(df) {
-#   # Obtain predictions
-#   knn.en <- knn(train = dplyr::select(bc_train.oversampled, -cancer_type), 
-#               test = dplyr::select(df, -cancer_type), 
-#               cl = bc_train.oversampled$cancer_type, k = 2) # need some way to pull the predicted classes
-#   
-#   svm.en <- predict(bc_svm, df)
-#   ann.en <- predict(bc_ann, df)
-#   
-#   # Find the predicted class
-#   predicted_class <- findPrediction(knn.en, svm.en, ann.en)
-# }
-# 
-# # Function to find the predicted class
-# findPrediction <- function(knn_pred, svm_pred, ann_pred) {
-#   # Find number of rows
-#   rows <- nrow(svm_pred)
-#   
-#   # Create empty dataframe of predicted classes
-#   predictions <- rep('', rows)
-#   
-#   # Identify similarity in models
-#   for (i in 1:rows) {
-#     if (svm_pred$class[i] == knn_pred$class[i] | # need to figure out the correct attribute call
-#         svm_pred$class[i] == ann_pred$class[i]) {
-#           predictions[i] == svm_pred$class[i]
-#         } else if (ann_pred$class[i] == knn_pred$class[1]) {
-#           predictions[i] == ann_pred$class[i]
-#         } else {
-#           'no confidence'
-#         }
-#   }
-#   
-#   return(predictions)
-#   
-# }
+```{r weighted-vote-ensemble}
+# Create a basic ensemble method
+runEnsemble <- function(df) {
+  
+  # Obtain predictions
+  knn.en <- knn(train = dplyr::select(bc_train.oversampled, -cancer_type),
+              test = dplyr::select(df, -cancer_type),
+              cl = bc_train.oversampled$cancer_type, k = 2)
+  svm.en <- predict(bc_svm, df)
+  ann.en <- predict(bc_ann, df)
+  
+  # Find the kappa values
+  knn.kappa <- Kappa(CrossTable(knn.en, df$cancer_type, prop.chisq = F)$t)
+  svm.kappa <- Kappa(CrossTable(svm.en, df$cancer_type, prop.chisq = F)$t)
+  ann.kappa <- Kappa(CrossTable(ann.en, df$cancer_type, prop.chisq = F)$t)
+  
+    # Calculate the weights
+  total_kappa <- sum(abs(knn.kappa), svm.kappa, ann.kappa) # knn might not be negative
+  knn.w <- abs(knn.kappa / total_kappa)
+  svm.w <- svm.kappa / total_kappa
+  ann.w <- ann.kappa / total_kappa
+
+  # Find the predicted class
+  predicted_class <- findPrediction(knn.en, svm.en, ann.en)
+}
+
+# Function to find the predicted class
+findPrediction <- function(knn_pred, svm_pred, ann_pred) {
+
+  # Calculate weighted prediction
+  predictions <- (as.numeric(knn_pred) - 1) * knn.w + 
+    (as.numeric(svm.pred) - 1) * svm.w +
+    (as.numeric(ann.pred) - 1) * ann.w
+  
+  # Update predictions to be binary
+  predictions = ifelse(predictions < 0.5, 'Breast Invasive Lobular Carcinoma', 
+                       'Breast Invasive Ductal Carcinoma')
+
+  return(predictions)
+
+}
 ```
 
 This adaboost algorithm was adapted from Ajeeth (2020).
 
 ```{r, adaboost}
-# Adaboost Function
-adaboost <- function(test_data, ml_1, ml_2, ml_3) {
-  # Set initial weights for sampling
-  n <- nrow(test_data)
-  w <- rep(1 / n, n)
-  
-  # Select samples
-  obs <- sample_n(test_data, size = n, weight = w, replace = T)
-
-  # Create predictions
-  p1 <- predict(ml_1, obs)
-  
-  # Find error
-  e <- findError(p1, w, test_data)
-  
-  # Measure performance
-  alpha1 <- findPerformance(e)
-  
-  # Set new weight
-  w2 <- setNewWeight(w, p1, test_data, alpha)
-  
-  obs2 <- sample_n(test_data, size = n, prob = w2, replacement = T)
-  
-  p2 <- predict(ml_2, obs2)
-  
-  e2 <- findError(p2, w2, test_data)
-  
-  alpha2 <- findPerformance(e2)
-  
-  # Set new weight
-  w3 <- setNewWeight(w2, p2, test_data, alpha2)
-  
-  obs3 <- sample_n(test_data, size = n, prob = w3, replacement = T)
-  
-  p3 <- predict(ml_3, obs3)
-  
-  e3 <- findError(p3, w3, test_data)
-
-  alpha3 <- findPerformance(e3)
-  
-  # Find the final prediction
-  fp <- finalPrediction(p1, p2, p3, alpha1, alpha2, alpha3)
-  return(list(p1, p2, p3, fp))
-}
-
-# Helper function for finding error
-findError <- function(predictions, weight, test_data) {
-  e <- sum(weight[predictions == test_data$classes])
-  return(e)
-}
-
-# Helper function to find performance
-findPerformance <- function(e) {
-  alpha <- (1 / 2) * log((1 - e) / e)
-  return(alpha)
-}
-
-# Set the new weight
-setNewWeight <- function(weight, prediction, test_data, alpha) {
-  # Initialize the new weight vector
-  w2 <- rep(0, nrow(test_data))
-  
-  # Adjust the weighted values
-  for (i in 1:nrow(test_data)) {
-    if (prediction[i] == test_data$cancer_type[i]) {
-      w2[i] <- weight[i] + exp(alpha)
-    } else {
-      w2[i] <- weight[i] + exp(-alpha)
-    }
-  }
-  
-  # Normalize the weights to add up to 1
-  w2 <- normalizeWeight(w2)
-  return(w2)
-}
-
-# Helper function to normalize weight
-normalizeWeight <- function(weight) {
-  norm_constant <- sum(weight)
-  norm_weight <- weight / norm_constant
-  
-  return(norm_weight)
-}
-
-# Function to find final predictions
-finalPrediction<- function(p1, p2, p3, alpha1, alpha2, alpha3) {
-  order <- c('Breast Invasive Ductal Carcinoma', 'Breast Invasive Lobular Carcinoma')
-  
-  fp <- alpha1 * (as.numeric(factor(p1, levels = order)) - 1) +
-        alpha2 * (as.numeric(factor(p2, levels = order)) - 1) +
-        alpha3 * (as.numeric(factor(p3, levels = order)) - 1)
-  
-  # Return to class
-  fp <- ifelse(fp <= 0.5, order[1], order[2])
-  
-  return(fp)
-}
+# # Adaboost Function
+# adaboost <- function(test_data, ml_1, ml_2, ml_3) {
+#   # Set initial weights for sampling
+#   n <- nrow(test_data)
+#   w <- rep(1 / n, n)
+#   
+#   # Select samples
+#   obs <- sample_n(test_data, size = n, weight = w, replace = T)
+# 
+#   # Create predictions
+#   p1 <- predict(ml_1, obs)
+#   
+#   # Find error
+#   e <- findError(p1, w, test_data)
+#   
+#   # Measure performance
+#   alpha1 <- findPerformance(e)
+#   
+#   # Set new weight
+#   w2 <- setNewWeight(w, p1, test_data, alpha)
+#   
+#   obs2 <- sample_n(test_data, size = n, prob = w2, replacement = T)
+#   
+#   p2 <- predict(ml_2, obs2)
+#   
+#   e2 <- findError(p2, w2, test_data)
+#   
+#   alpha2 <- findPerformance(e2)
+#   
+#   # Set new weight
+#   w3 <- setNewWeight(w2, p2, test_data, alpha2)
+#   
+#   obs3 <- sample_n(test_data, size = n, prob = w3, replacement = T)
+#   
+#   p3 <- predict(ml_3, obs3)
+#   
+#   e3 <- findError(p3, w3, test_data)
+# 
+#   alpha3 <- findPerformance(e3)
+#   
+#   # Find the final prediction
+#   fp <- finalPrediction(p1, p2, p3, alpha1, alpha2, alpha3)
+#   return(list(p1, p2, p3, fp))
+# }
+# 
+# # Helper function for finding error
+# findError <- function(predictions, weight, test_data) {
+#   e <- sum(weight[predictions == test_data$classes])
+#   return(e)
+# }
+# 
+# # Helper function to find performance
+# findPerformance <- function(e) {
+#   alpha <- (1 / 2) * log((1 - e) / e)
+#   return(alpha)
+# }
+# 
+# # Set the new weight
+# setNewWeight <- function(weight, prediction, test_data, alpha) {
+#   # Initialize the new weight vector
+#   w2 <- rep(0, nrow(test_data))
+#   
+#   # Adjust the weighted values
+#   for (i in 1:nrow(test_data)) {
+#     if (prediction[i] == test_data$cancer_type[i]) {
+#       w2[i] <- weight[i] + exp(alpha)
+#     } else {
+#       w2[i] <- weight[i] + exp(-alpha)
+#     }
+#   }
+#   
+#   # Normalize the weights to add up to 1
+#   w2 <- normalizeWeight(w2)
+#   return(w2)
+# }
+# 
+# # Helper function to normalize weight
+# normalizeWeight <- function(weight) {
+#   norm_constant <- sum(weight)
+#   norm_weight <- weight / norm_constant
+#   
+#   return(norm_weight)
+# }
+# 
+# # Function to find final predictions
+# finalPrediction<- function(p1, p2, p3, alpha1, alpha2, alpha3) {
+#   order <- c('Breast Invasive Ductal Carcinoma', 'Breast Invasive Lobular Carcinoma')
+#   
+#   fp <- alpha1 * (as.numeric(factor(p1, levels = order)) - 1) +
+#         alpha2 * (as.numeric(factor(p2, levels = order)) - 1) +
+#         alpha3 * (as.numeric(factor(p3, levels = order)) - 1)
+#   
+#   # Return to class
+#   fp <- ifelse(fp <= 0.5, order[1], order[2])
+#   
+#   return(fp)
+# }
 ```
 
 # Conclusions
